fix for amethyst theme typgraphy being unreadable due to font and background color

--- a/gogrow_app/static/content/themes.css
+++ b/gogrow_app/static/content/themes.css
@@ -99,10 +99,10 @@
     --primary-bg: #2c2c2c;
     --primary-text: #f0f0f0;
     --secondary-bg: #7d6381;
-    --secondary-text: #f0f0f0;
+    --secondary-text: #cc991f;
     --table-row-bg: #f2f2f2;
     --table-row-alt-bg: #c2b0bc;
-    --table-row-text: #f0f0f0;
+    --table-row-text: #664e4c;
     --details-head-text: #f0f0f0;
     --details-body-text: #f0f0f0;
     --details-footer-text: #f0f0f0;
